# Img2Num

./: .clang-format  .clang-tidy  .coderabbit.yaml  .dockerignore  .editorconfig  .editorconfig-checker.json  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  .release-please-manifest.json  404.html  CHANGELOG.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  DELIVERABLES.md  Dockerfile.dev  FINAL_SUMMARY.md  Justfile  LICENSE  LICENSE-MIT  Makefile  PROJECT_TESTS_COMPLETE.md  README.md  README_TESTS.md  SECURITY.md  TESTING_SUMMARY.md  TESTS_CREATED.md  TEST_GENERATION_README.md  TEST_SUITE_README.md  TEST_SUITE_SUMMARY.md  UNIT_TESTS_COMPLETE.md  UNIT_TESTS_GENERATED.md  blog.md  changelog.md  (+21 more)
.devcontainer/: devcontainer.json  entrypoint.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
assets/: About-6aPV6xPd.js  About-9BEBwv-x.js  About-9ZTGrit4.css  About-B0rG8ox8.js  About-B74vXXQB.js  About-BCbYbJDa.js  About-BLq2Re9h.js  About-BY1UEpQo.js  About-Bdi77kdt.js  About-BhCmZP65.js  About-BrAN_h8h.js  About-C5Emkbm3.js  About-C5gEhjVq.js  About-C5tA99ct.js  About-C83RZJMC.js  About-CIXFV7X0.js  About-CN2wripV.js  About-CSU182rm.js  About-CW7KpsNM.js  About-CYys_rFj.js  About-CZxovhxW.js  About-C_NIolFG.js  About-CdDQs9L2.js  About-CdQeWdqF.js  About-CeyUizG3.js  About-CjobiZd3.js  About-D8TS5ZSN.js  About-DSPFd36R.js  About-DdEyaNkY.js  About-DeOoSWqA.js  About-Dih9Zipb.js  About-DiryZSVP.js  About-DjiLxTSj.js  About-DortQnM_.js  About-Dw5fWFrE.js  About-DyK_znLm.js  About-LH3X2w9c.js  About-Lrp3Qg0a.js  About-Nhphsrp_.js  About-cwJaiXz2.js  (+416 more)
bindings/c/: CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.public  main_page.dox
bindings/c/cmake/: CImg2NumConfig.cmake.in
bindings/c/doxygen/: home_page.dox
bindings/c/include/: cimg2num.h
bindings/c/include/cimg2num/: cimg2num_error_t.h  img2num_error_t.h
bindings/c/src/: cimg2num.cpp
bindings/c/src/cimg2num/: cimg2num_error_t.cpp  img2num_error_t.cpp
bindings/js/: CMakeLists.txt  Doxyfile  Doxyfile.internal
bindings/js/doxygen/: home_page.dox
bindings/js/include/: exported.h
bindings/js/src/: wasm_wrapper.c  wasm_wrapper.cpp
bindings/py/: CMakeLists.txt  Doxyfile.internal
bindings/py/doxygen/: home_page.dox
bindings/py/src/: img2num_pybind.cpp  python_wrapper.cpp
bindings/python/: CMakeLists.txt
bindings/python/src/: img2num_pybind.cpp
blog/: atom.xml  img2num-maintainer-expansion.md  index.html  launch.md  rss.xml  tags.md
changelog/: c.md  cpp.md  index.html  js.md  py.md
cmake/: Img2NumConfig.cmake.in
core/: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.internal  Doxyfile.public  LICENSE  img2num.h
core/cmake/: Img2NumConfig.cmake.in
core/doxygen/: home_page.dox
core/include/: Image.h  LABAPixel.h  LABPixel.h  PixelConverters.h  Point.h  RGBAPixel.h  RGBPixel.h  SavitskyGolay.h  bezier.h  cielab.h  cielab_impl.h  contours.h  exported.h  fft_iterative.h  graph.h  image_utils.h  img2num.h  node.h
core/include/img2num/: Error.h
core/include/internal/: Image.h  LABAPixel.h  LABPixel.h  Pixel.h  PixelConverter.h  PixelConverters.h  Point.h  RGBAPixel.h  RGBPixel.h  SavitskyGolay.h  SavitzkyGolay.h  bezier.h  bilateral_filter_gpu.h  cielab.h  cielab_impl.h  contours.h  debug.h  douglas_peucker.h  fft_iterative.h  gpu.h  graph.h  kmeans_gpu.h  node.h  shared_contours.h
core/modules/image/: CMakeLists.txt
core/modules/image/include/: image_utils.h  kmeans_graph.h
core/modules/image/src/: kmeans.cpp
core/src/: SavitskyGolay.cpp  bezier.cpp  bilateral_filter.cpp  contours.cpp  fft_iterative.cpp  graph.cpp  image_utils.cpp  kmeans.cpp  labels_to_svg.cpp  node.cpp
core/src/img2num/: Error.cpp
core/src/internal/: SavitskyGolay.cpp  SavitzkyGolay.cpp  bezier.cpp  bilateral_filter.cpp  bilateral_filter_gpu.cpp  color_quantize.cpp  contours.cpp  douglas_peucker.cpp  fft_iterative.cpp  graph.cpp  image_to_svg.cpp  image_utils.cpp  kmeans.cpp  kmeans_gpu.cpp  labels_to_svg.cpp  node.cpp  shared_contours.cpp
core/src/internal/resources/: assign_shader.wgsl  assign_update_shader.wgsl  bilateral_filter_lab.wgsl  cielab2rgb.wgsl  dist_shader.wgsl  resolve_shader.wgsl  update_shader.wgsl
core/src/resources/: bilateral_filter_rgb.wgsl  dist_shader.wgsl  resolve_shader.wgsl  rgb2cielab.wgsl
core/tools/: embed_shaders.py
credits/: index.html
docs/: .env.example  .gitignore  404.html  README.md  c.md  changelogSidebarGenerator.js  changelogSidebars.js  common-api-reference.md  contributing.md  core-concepts.md  cpp.md  docusaurus.config.js  faq.md  index.html  internal.md  js.md  package-lock.json  package.json  pr-guide.md  py.md  sidebars.js  sitemap.xml  tags.md  versions.json
doxygen/: Doxyfile.base  img2num.h.dox
example-apps/console-c/: CMakeLists.txt  main.c
example-apps/console-cpp/: CMakeLists.txt  main.cpp
info/: 404.html  index.html  opensearch.xml  sitemap.xml
js/: api.json
learn/: 404.html  index.html  sitemap.xml
src/wasm/: .gitignore  CMakeLists.txt  Makefile
src/wasm/include/: image_utils.h
src/wasm/modules/image/: CMakeLists.txt  Makefile
src/wasm/modules/image/include/: Image.h  LABAPixel.h  LABPixel.h  Pixel.h  PixelConverter.h  PixelConverters.h  Point.h  RGBAPixel.h  RGBPixel.h  SavitskyGolay.h  bezier.h  bilateral_filter.h  bilateral_filter_gpu.h  cielab.h  cielab_impl.h  contours.h  exported.h  fft_iterative.h  find_contours.h  gpu.h  graph.h  image_utils.h  kmeans.h  kmeans_gpu.h  kmeans_graph.h  labels_to_svg.h  mergeSmallRegionsInPlace.h  morphology.h  node.h  solver.h  test_svg.h  utils.h  visualize_contours.h
src/wasm/modules/image/src/: SavitskyGolay.cpp  bezier.cpp  bilateral_filter.cpp  bilateral_filter_gpu.cpp  cielab.cpp  contours.cpp  fft_iterative.cpp  find_contours.cpp  graph.cpp  image_utils.cpp  kmeans.cpp  kmeans_gpu.cpp  kmeans_graph.cpp  labels_to_svg.cpp  mergeSmallRegionsInPlace.cpp  morphology.cpp  node.cpp  solver.cpp  test_svg.cpp  visualize_contours.cpp
src/wasm/src/: image_utils.cpp
(+5590 files in other folders)
