[project]
name = "img2num"
version = "0.0.0"
description = "A fast and accurate raster image to SVG conversion library"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Ryan Millard" }]
dependencies = [
  "numpy"
]

[project.urls]
Homepage   = "https://ryan-millard.github.io/Img2Num/"
Repository = "https://github.com/Ryan-Millard/Img2Num"

[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.10",
  "numpy"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.args = [
  "-DBUILD_PYTHON=ON",
  "-DPython3_FIND_VIRTUALENV=NEVER",
]

# Python package lives HERE (unchanged code location)
wheel.packages = ["img2num"]

sdist.include = [
  "CMakeLists.txt",
  "core/**",
  "bindings/py/**",
  "packages/py/**"
]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
  # All example apps with "-py" suffix
  "example-apps/*-py"
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["third_party/", "docs/", ".venv/"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "B",   # flake8-bugbear (mutable defaults, bare excepts, etc.)
  "UP",  # pyupgrade — modernise syntax
  "SIM", # flake8-simplify
]
# ruff obeys .gitignore by default
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"] # Allow re-exports in __init__.py

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

