[project]
name = "img2num"
version = "0.0.0"  # x-release-please-version
description = "A fast and accurate raster image to SVG conversion library"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Ryan Millard" }]
dependencies = [
  "numpy>=1.23.5"
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Scientific/Engineering :: Image Processing"
]

[project.urls]
Homepage      = "https://ryan-millard.github.io/Img2Num/info/docs/"
Repository    = "https://github.com/Ryan-Millard/Img2Num"
Documentation = "https://ryan-millard.github.io/Img2Num/info/docs/"
Changelog     = "https://github.com/Ryan-Millard/Img2Num/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Ryan-Millard/Img2Num/issues"

[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.10",
  "numpy>=2.0"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.args = [
  "-DBUILD_PYTHON=ON",
  "-DPython3_FIND_VIRTUALENV=NEVER",
  "-DIMG2NUM_BUILD_EXAMPLES=OFF",
]

wheel.packages = ["img2num"]

sdist.include = [
  "CMakeLists.txt",
  "core/**",
  "bindings/py/**",
  "packages/py/**",
  "third_party/**"
]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
  # All example apps with "-py" suffix
  "example-apps/*-py"
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["third_party/", "docs/", ".venv/"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "B",   # flake8-bugbear (mutable defaults, bare excepts, etc.)
  "UP",  # pyupgrade — modernise syntax
  "SIM", # flake8-simplify
]
# ruff obeys .gitignore by default
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"] # Allow re-exports in __init__.py

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

